force-app/main/default/objects/Course_Outcome__c/Course_Outcome__c.object-meta.xml
<CustomObject>
    <label>Course Outcome</label>
    <nameField>
        <label>Course Outcome Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Outcomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>