force-app/main/default/objects/Course_Outcome__c/fields/Blooms_Taxonomy_Level__c.field-meta.xml
<CustomField>
    <fullName>Blooms_Taxonomy_Level__c</fullName>
    <label>Blooms Taxonomy Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remember</fullName>
            </value>
            <value>
                <fullName>Understand</fullName>
            </value>
            <value>
                <fullName>Apply</fullName>
            </value>
            <value>
                <fullName>Analyze</fullName>
            </value>
            <value>
                <fullName>Evaluate</fullName>
            </value>
            <value>
                <fullName>Create</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>