force-app/main/default/objects/Course_Outcome__c/fields/Course_Outcome_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Outcome_Code__c</fullName>
    <label>Course Outcome Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>