force-app/main/default/objects/Course_Outcome__c/fields/Study_Unit_Version__c.field-meta.xml
<CustomField>
    <fullName>Study_Unit_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Unit Version</label>
    <referenceTo>Study_Unit_Version__c</referenceTo>
    <relationshipLabel>Course Outcomes</relationshipLabel>
    <relationshipName>Course_Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>